Evolution et modification de la page d'accueil

--- a/css/accueil/main_accueil.scss
+++ b/css/accueil/main_accueil.scss
@@ -1,3 +1,3 @@
-@import 'mobile_accueil';
-@import 'pc_accueil';
-@import 'tablette_accueil';
+@import '../profil/mobile_accueil.scss';
+@import '../profil/pc_accueil.scss';
+@import '../profil/tablette_accueil.scss';
