--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 /* -------------------- CHARTE GRAPHIQUE ------------ */
+@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap");
 :root {
   --white: #FFF;
   --black: #111;
@@ -30,6 +31,280 @@
 @font-face {
   font-family: "MavenRegular";
   src: url("../font/MavenPro-Regular.ttf");
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+#header {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 100vh;
+      grid-template-rows: 100vh;
+}
+
+#header #imageAccueil {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 50% 5vh;
+      grid-template-rows: 50% 5vh;
+}
+
+#header #imageAccueil img {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  border-radius: 0 0 20px 20px;
+}
+
+#header #imageAccueil #titre {
+  font-family: "MavenBold";
+  font-size: 6rem;
+  margin-left: 35%;
+  margin-top: 23%;
+  position: absolute;
+  color: white;
+}
+
+#contenu {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 5vh 20vh 5vh 20vh;
+      grid-template-rows: 5vh 20vh 5vh 20vh;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+#contenu #information {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-row: 2;
+  grid-row: 2;
+}
+
+#contenu #information h3 {
+  font-family: "MavenRegular";
+  font-size: 2.3rem;
+  color: var(--bleuclair);
+  font-weight: lighter;
+  text-shadow: black 0px 0 1px;
+  text-align: center;
+}
+
+#contenu #titre2 {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-row: 4;
+  grid-row: 4;
+}
+
+@media (min-width: 1281px) {
+  * {
+    margin: 0;
+    padding: 0;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    font-family: 'MavenBold';
+  }
+  nav {
+    background: var(--black);
+  }
+  nav:after {
+    content: '';
+    clear: both;
+    display: table;
+  }
+  nav .logo img {
+    float: left;
+    width: 10%;
+    margin: 10px 0 10px 10%;
+  }
+  nav ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    line-height: 100px;
+    list-style: none;
+    position: relative;
+    margin-right: 10%;
+  }
+  nav ul li {
+    text-align: left;
+    display: inline-block;
+    background: var(--black);
+    margin: 0 5px;
+  }
+  nav ul li a {
+    color: var(--white);
+    line-height: 70px;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 8px 50px;
+  }
+  nav ul li a:hover {
+    color: var(--bleuclair);
+    border-radius: 5px;
+    -webkit-box-shadow: 0 0 5px var(--bleu), 0 0 10px var(--bleuclair);
+            box-shadow: 0 0 5px var(--bleu), 0 0 10px var(--bleuclair);
+  }
+  nav ul ul li a:hover {
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+  nav ul ul {
+    position: absolute;
+    top: 120px;
+    border-top: 3px solid var(--bleuclair);
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: top .3s;
+    transition: top .3s;
+  }
+  nav ul li:hover > ul {
+    top: 100px;
+    opacity: 1;
+    visibility: visible;
+  }
+  nav ul ul li {
+    position: relative;
+    margin: 0px;
+    width: auto;
+    float: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    border-bottom: 1px solid var(--bleu);
+    text-align: center;
+  }
+  nav ul ul li a {
+    line-height: 50px;
+  }
+  nav ul ul ul li {
+    position: relative;
+    top: -60px;
+    left: 150px;
+  }
+  .show,
+  .icon,
+  input {
+    display: none;
+  }
+  .fa-plus {
+    font-size: 15px;
+    margin-left: 40px;
+  }
+}
+
+@media all and (min-width: 1281px) and (max-width: 1280px) {
+  nav .logo img {
+    width: 25%;
+    margin: 10px 0;
+  }
+  nav ul {
+    margin-right: 0px;
+    text-align: center;
+    width: 100% !important;
+  }
+  .show + a,
+  ul {
+    display: none;
+  }
+  nav ul li,
+  nav ul ul li {
+    display: block;
+    width: 100% !important;
+  }
+  nav ul li a:hover {
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+  .show {
+    width: 100%;
+    text-align: center;
+    color: white;
+    font-size: 18px;
+    padding: 0 20px;
+    line-height: 70px;
+    cursor: pointer;
+  }
+  .show:hover {
+    color: var(--bleuclair);
+  }
+  .icon {
+    display: block;
+    color: white;
+    position: absolute;
+    top: 0;
+    right: 40px;
+    line-height: 100px;
+    cursor: pointer;
+    font-size: 2em;
+  }
+  nav ul ul {
+    width: 100%;
+    top: 70px;
+    border-top: 0px;
+    float: none;
+    position: static;
+    display: none;
+    opacity: 1;
+    visibility: visible;
+    text-align: center;
+  }
+  nav ul ul a {
+    padding-left: 40px;
+  }
+  nav ul ul ul a {
+    padding-left: 80px;
+  }
+  nav ul ul ul li {
+    position: static;
+  }
+  [id^=btn]:checked + ul {
+    display: block;
+  }
+  nav ul ul li {
+    border-bottom: 0px;
+  }
+  span.cancel:before {
+    content: '\f00d';
+  }
+}
+
+@media (min-width: 1281px) {
+  .content {
+    z-index: -1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  header {
+    font-size: 35px;
+    font-weight: 600;
+    padding: 10px 0;
+  }
+  p {
+    font-size: 30px;
+    font-weight: 500;
+  }
 }
 
 h1 {
