--- a/css/accueil/main_accueil.scss
+++ b/css/accueil/main_accueil.scss
@@ -1,3 +1,3 @@
-@import '../profil/mobile_accueil.scss';
-@import '../profil/pc_accueil.scss';
-@import '../profil/tablette_accueil.scss';
+@import 'mobile_accueil';
+@import 'pc_accueil';
+@import 'tablette_accueil';
